--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.12.3",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "file-saver": "^2.0.5",
     "firebase": "^11.7.1",
     "ipaddr.js": "^2.2.0",
     "mdb-react-ui-kit": "^9.0.0",
@@ -33,6 +34,7 @@
     "react-table": "7.8.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "xlsx": "^0.18.5",
     "yup": "1.1.1"
   },
   "scripts": {
